# -ai-translator

./: README.md
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 11065b6dc19f_init_translations_table.py  93d4226949a7_add_status_field_to_translations.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: history.py  translate.py
backend/app/core/: config.py  database.py
backend/app/models/: translation.py
backend/app/services/: history.py  translator.py
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: index.ts
frontend/src/components/: HistoryList.vue  TranslateForm.vue
md/: Alembic迁移指南.md  Phase1_项目初始化.md  Phase2_Backend基础框架.md  Phase3.5_Alembic完全指南.md  Phase3_数据库模型与迁移.md  Phase4_CRUD_Service.md  Phase5_LangChain翻译服务.md  Phase6_API路由.md  Plan.md
