[project]
name = "banked"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.2.2",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.49.0",
]
